--- a/web_angular2/web/lib/components/user_register_component.html
+++ b/web_angular2/web/lib/components/user_register_component.html
@@ -50,7 +50,7 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default btn-simple" data-dismiss="modal">Cancel</button>
-        <button type="button" *ngIf="!isHttpLoading" class="btn btn-primary" type="submit" click="register()"> Login </button>
+        <button type="button" *ngIf="!isHttpLoading" class="btn btn-primary" type="submit" click="register()"> Register </button>
         <material-spinner *ngIf="isHttpLoading" ></material-spinner>
     </div>
 </form>
