--- a/web_angular2/web/lib/components/application_detail_header_component.html
+++ b/web_angular2/web/lib/components/application_detail_header_component.html
@@ -11,7 +11,7 @@
         <div *ngIf="canAdmin">
             apiKey : {{application.apiKey}}
             <div *ngIf="maxVersionEnabled">
-                <button type="button" (click)="isMaxVersionEnabledCollapsed = !isMaxVersionEnabledCollapsed" class="glyphicon btn btn-xs btn-flat btn-default">Max Version
+                <button type="button" (click)="isMaxVersionEnabledCollapsed = !isMaxVersionEnabledCollapsed" class="glyphicon btn btn-xs btn-flat btn-primary">Max Version
                     <i *ngIf="!isMaxVersionEnabledCollapsed" class="material-icons">keyboard_arrow_up</i>
                     <i *ngIf="isMaxVersionEnabledCollapsed" class="material-icons">keyboard_arrow_down</i>
                 </button>
@@ -29,42 +29,9 @@
         </div>
     </div>
 </div>
-<div class="tim row">
-    <br/>
-    <button (click)="toggleFavorite()" class="btn btn-white btn-fab btn-fab-mini btn-round">
-        <i *ngIf="isFavorite" class="material-icons">favorite</i>
-        <i *ngIf="!isFavorite" class="material-icons">favorite_border</i>
-    </button> &nbsp; &nbsp;
-    <!--
-    <button (click)="toggleFavorite()" type="button" class="btn btn-sm" [ngClass]="isFavorite ? 'active  btn-success' : ' btn-default'">
-        <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Favorite
-    </button>
-    <button type="button" (click)="toggleAdministrators()" class="glyphicon btn btn-xs btn-flat btn-default">Administrators  <span [ngClass]="{'glyphicon-chevron-down': !isAdminUsersCollapsed, 'glyphicon-chevron-right': isAdminUsersCollapsed}"></span></button>
-    <div *ngIf="!isAdminUsersCollapsed">
-        <div  *ngIf="canAdmin" class="input-append">
-            <input class1="form-control"  placeholder="administrator email" [(ngModel)]="administratorToAdd" />
-            <button class="btn btn-xs btn-flat btn-danger" (click)="addAdministrator(administratorToAdd)">add</button>
-        </div>
-        <dl class="dl-horizontal" *ngFor="let admin of application.adminUsers">
-            <dt>{{admin.name}} :</dt>
-            <dd>{{admin.email}} <button type="button" *ngIf="canAdmin" class="btn btn-xs btn-flat btn-danger" (click)="deleteAdministrator(admin.email)">remove</button></dd>
-        </dl>
-    </div>
-    <br/>
-    <button class="btn btn-white btn-sm btn-round">
-        <i class="material-icons">supervisor_account</i>Administrators
-    </button>
-    -->
-    <button *ngIf="canAdmin" (click)="editApplication()" data-toggle="modal" data-target="#allModals" class="btn btn-danger btn-fab btn-fab-mini btn-round">
-        <i  class="material-icons">mode_edit</i>
-    </button>
-    <button *ngIf="canAdmin" (click)="deleteApplication()" class="btn btn-danger btn-fab btn-fab-mini btn-round">
-        <i  class="material-icons">delete</i>
-    </button>
-</div>
 <br/>
 <div class="tim row">
-    <div class="col-sm-8 col-md-4">
+    <div class="col-sm-6 col-md-4 col-xs-10">
         <material-expansionpanel-set>
             <material-expansionpanel  [showSaveCancel]=false name="Application Administrators">
                 <table class="table table-striped table-condensed">
@@ -91,22 +58,32 @@
             </material-expansionpanel>
         </material-expansionpanel-set>
     </div>
-
-</div>
-<!--
-<div class="tim row">
-    <div *ngIf="!isAdminUsersCollapsed" class="col-sm-10 col-md-5" >
-        <div class="form-group">
-            <input type="text" value="" placeholder="Regular" class="form-control" />
-        </div>
-        <table class="table">
-            <tbody>
-            <tr *ngFor="let admin of application.adminUsers">
-                <td class="text-primary">{{admin.name}}  </td> <td>{{admin.email}} </td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="col-sm-1 col-md-1 col-xs-2">
+        <button (click)="toggleFavorite()" class="btn btn-white btn-fab btn-fab-mini btn-round">
+            <i *ngIf="isFavorite" class="material-icons">favorite</i>
+            <i *ngIf="!isFavorite" class="material-icons">favorite_border</i>
+        </button>
     </div>
-</div> -->
-
+</div>
+<div class="tim row" *ngIf="canAdmin">
+    <br/>
+    &nbsp; &nbsp;
+    <button *ngIf="canAdmin" (click)="editApplication()" data-toggle="modal" data-target="#allModals" class="btn btn-danger btn-fab btn-fab-mini btn-round">
+        <i
+                class="material-icons">mode_edit</i>
+    </button>
+    <button *ngIf="canAdmin" (click)="showDeleteDialog = true" class="btn btn-danger btn-fab btn-fab-mini btn-round">
+        <i  class="material-icons">delete</i>
+    </button>
+</div>
+<modal [(visible)]="showDeleteDialog">
+    <material-dialog class="no-header-footer-dialog" hideHeader="true" hideFooter="true">
+        <h3>Are you sure to delete {{application.name}}?</h3>
+            <p>All versions will be trash. This can't be undone.</p>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default btn-simple" (click)="showDeleteDialog = false">Cancel</button>
+            <button type="button" class="btn btn-primary"  (click)="deleteApplication()">Delete</button>
+        </div>
+    </material-dialog>
+</modal>
 <error_comp [error]="error"></error_comp>
