--- a/web_angular2/web/lib/components/artifact_component.html
+++ b/web_angular2/web/lib/components/artifact_component.html
@@ -10,7 +10,8 @@
         </span>
                 </td>
                 <td class="td-actions text-right">
-                        <material-button (click)="generateQrCode()" icon><glyph icon="crop_free"></glyph></material-button>
+                        <material-button data-toggle="modal" data-target="#allModals" (click)="generateQrCode()" icon><img src="images/qrcode_black.png" /></material-button>
+                    <!--    <material-button data-toggle="modal" data-target="#allModals" (click)="generateQrCode()" icon><glyph icon="crop_free"></glyph></material-button> -->
                         <material-button (click)="downloadOrInstall()" icon><glyph icon="get_app"></glyph></material-button>
                         <material-button (click)="isCollapsed = !isCollapsed" icon ><glyph icon="more_vert"></glyph></material-button>
                         <material-button class="admin_button" (click)="deleteArtifact()" icon *ngIf="canDelete"><glyph icon="delete"></glyph></material-button>
