--- a/web_angular2/web/lib/components/modals_components.html
+++ b/web_angular2/web/lib/components/modals_components.html
@@ -6,6 +6,7 @@
             <register_comp *ngIf="isRegisterModal"></register_comp>
             <edit_app_comp *ngIf="isEditAppModal" [parameters]="parameters"></edit_app_comp>
             <qr_code_component *ngIf="isQrCodeModal" [parameters]="parameters"></qr_code_component>
+            <add_artifact *ngIf="isAddArtifactModal" [parameters]="parameters"></add_artifact>
         </div>
     </div>
 </div>
