--- a/web_angular2/web/lib/components/artifact_download_qrcode_component.html
+++ b/web_angular2/web/lib/components/artifact_download_qrcode_component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="material-icons">close</i></button>
     <h4 class="modal-title" id="myModalLabel">{{title}}</h4>
 </div>
 <div class="modal-body center-block">
