--- a/web_angular2/web/lib/components/user_register_component.html
+++ b/web_angular2/web/lib/components/user_register_component.html
@@ -1,6 +1,6 @@
 <form  (ngSubmit)="register()" #registerorm="ngForm">
     <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="material-icons">close</i></button>
         <h4 class="modal-title" id="myModalLabel">Register</h4>
     </div>
     <div class="modal-body">
