continue angular 2 refactoring : administrationn

--- a/web_angular2/web/assets/css/mdt-specific.css
+++ b/web_angular2/web/assets/css/mdt-specific.css
@@ -108,3 +108,11 @@ material-input {
     height: auto;
     margin-right: 10px;
 }
+
+.form-compact {
+    margin: 0px;
+}
+
+.text-vertical-align {
+    vertical-align: middle !important;
+}
