home and loading

--- a/web_angular2/web/lib/components/user_login_component.html
+++ b/web_angular2/web/lib/components/user_login_component.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div *ngIf="false">
             Lost my password ?
             <button type="button" class="btn btn-default btn-simple btn-sm">Recover</button>
         </div>
