--- a/web_angular2/web/assets/css/mdt-specific.css
+++ b/web_angular2/web/assets/css/mdt-specific.css
@@ -116,3 +116,16 @@ material-input {
 .text-vertical-align {
     vertical-align: middle !important;
 }
+
+.center-div
+{
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border-radius: 3px;
+    background-color: white;
+    width:50%; height:300px;
+}
