--- a/web_angular2/web/assets/sass/material-kit.scss
+++ b/web_angular2/web/assets/sass/material-kit.scss
@@ -29,8 +29,8 @@
  *               Buddha Bless:  "No Bugs"
  *
  * ========================================================= */
-
 @import 'material-kit/variables';
+@import "mdt-theme";
 @import 'material-kit/mixins';
 @import 'material-kit/shadows';
 @import 'material-kit/core';
