--- a/web_angular2/web/assets/sass/mdt-theme.scss
+++ b/web_angular2/web/assets/sass/mdt-theme.scss
@@ -1,18 +1,25 @@
 //$brand-primary: #F16E00 !default; //$purple !default;
 //$brand-secondary: #9e9e9e !default; //$purple !default;
 $brand-primary: #7B1FA2 !default;
-$brand-accent: #E040FB !default; //$purple !default;
+$brand-accent: #7B1FA2 !default; //#E040FB !default; //$purple !default;
 //https://www.materialpalette.com/
 //$brand-accent: $orange !default;
 /*   Material button */
+/*
 material-button  h2 {
   color:$brand-accent;
-}
-
+}*/
 material-button  .material-icons {
   color:$brand-accent;
 }
-
+material-button  .material-icons.md-48 {
+  color:$brand-accent;
+  position: relative;
+  top:8px;
+}
+material-button.admin_button .material-icons{
+  color: red;
+}
 
 /*   checkbox */
 material-checkbox .material-icons{
@@ -20,15 +27,20 @@ material-checkbox .material-icons{
 }
 
 /*   round button */
-material-fab .material-icons {
+material-fab .material-icons.primary{
   color:$brand-accent;
 }
-.btn-white .material-icons {
+.btn-white .material-icons.primary{
   color:$brand-accent;
 }
 
 /*   radio button */
 material-radio .material-icons {
+  color:$brand-primary;
+}
+
+/* panel */
+material-expansionpanel header  .material-icons{
   color:$brand-primary;
 }
 
