--- a/web_angular2/web/assets/sass/material-kit/_core.scss
+++ b/web_angular2/web/assets/sass/material-kit/_core.scss
@@ -51,39 +51,39 @@ a, a:hover, a:focus {
     @include transition($fast-transition-time, $transition-ease);
 }
 
-@import '_form';
+@import 'form';
 //@import '_welljumbo';   // Not designed yet by Creative Tim, you can use it as it is
-@import '_buttons';
-@import '_checkboxes';
-@import '_togglebutton';
-@import '_radios';
-@import '_inputs';
-@import '_pagination';
-@import '_labels';
-@import '_pills';
-@import '_footers';
+@import 'buttons';
+@import 'checkboxes';
+@import 'togglebutton';
+@import 'radios';
+@import 'inputs';
+@import 'pagination';
+@import 'labels';
+@import 'pills';
+@import 'footers';
 
 legend {
   border-bottom: 0;
 }
 
 //@import '_lists';  // Not designed yet by Creative Tim, you can use it as it is
-@import '_navbar';
+@import 'navbar';
 
-@import '_dropdown';
-@import '_info-areas';
-@import '_alerts';
-@import '_progress';
-@import '_typography';
-@import '_tabs';
-@import '_popups';
-@import '_carousel';
-@import '_cards';
-@import '_dialogs';
-@import '_panels';
-@import '_dividers';
+@import 'dropdown';
+@import 'info-areas';
+@import 'alerts';
+@import 'progress';
+@import 'typography';
+@import 'tabs';
+@import 'popups';
+@import 'carousel';
+@import 'cards';
+@import 'dialogs';
+@import 'panels';
+@import 'dividers';
 
-@import '_images';
+@import 'images';
 
 
 // Prevent highlight on mobile
@@ -105,11 +105,11 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
     outline : 0 !important;
 }
 
-@import '_sections';
+@import 'sections';
 
 // External plugins
 // @import 'plugins/_plugin-snackbarjs';   // Not designed yet by Creative Tim, you can use it as it is
-@import 'plugins/_plugin-nouislider';
+@import 'plugins/plugin-nouislider';
 //@import 'plugins/_plugin-selectize';     // Not designed yet by Creative Tim, you can use it as it is
-@import 'plugins/_plugin-dropdownjs';
-@import 'plugins/_plugin-datepicker';
+@import 'plugins/plugin-dropdownjs';
+@import 'plugins/plugin-datepicker';
