--- a/web_angular2/web/lib/components/bottom_bar_component.html
+++ b/web_angular2/web/lib/components/bottom_bar_component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <nav class="pull-right">
             <div class="copyright">
-                &copy; 2016 Mobile App Distribution Tool - version ({{mdt_version}})
+                &copy; 2016 Mobile App Distribution Tool - version ({{currentVersion}})
             </div>
         </nav>
 
