fix checkbox and rebuild UI

--- a/web_angular2/web/assets/sass/mdt-theme.scss
+++ b/web_angular2/web/assets/sass/mdt-theme.scss
@@ -23,6 +23,10 @@ material-button.admin_button .material-icons{
 
 /*   checkbox */
 material-checkbox .material-icons{
+
+}
+material-checkbox .icon.filled .material-icons{
+  background-color: white;
   color:$brand-primary;
 }
 
