--- a/web_angular2/web/assets/sass/mdt-theme.scss
+++ b/web_angular2/web/assets/sass/mdt-theme.scss
@@ -1,7 +1,7 @@
 //$brand-primary: #F16E00 !default; //$purple !default;
 //$brand-secondary: #9e9e9e !default; //$purple !default;
-$brand-primary: #7B1FA2 !default;
-$brand-accent: #7B1FA2 !default; //#E040FB !default; //$purple !default;
+$brand-primary: #F16E00 !default;
+$brand-accent: #F16E00 !default; //#E040FB !default; //$purple !default;
 //https://www.materialpalette.com/
 //$brand-accent: $orange !default;
 /*   Material button */
