forgot password implementation on server fix startup with database ooo

--- a/web_angular2/web/lib/components/user_login_component.html
+++ b/web_angular2/web/lib/components/user_login_component.html
@@ -29,9 +29,9 @@
                 </div>
             </div>
         </div>
-        <div *ngIf="false">
+        <div>
             Lost my password ?
-            <button type="button" class="btn btn-default btn-simple btn-sm">Recover</button>
+            <button type="button" class="btn btn-default btn-simple btn-sm" (click)="recoverPassword()">Recover</button>
         </div>
         <div>
             Not already a account ?
