--- a/web_angular2/web/lib/components/user_login_component.html
+++ b/web_angular2/web/lib/components/user_login_component.html
@@ -31,7 +31,7 @@
         </div>
         <div>
             Lost my password ?
-            <button type="button" class="btn btn-default btn-simple btn-sm" (click)="recoverPassword()">Recover</button>
+            <button type="button" class="btn btn-primary btn-simple btn-sm" (click)="recoverPassword()">Recover</button>
         </div>
         <div>
             Not already a account ?
