add columns in users administration

--- a/web_angular2/web/lib/components/users_administration_component.html
+++ b/web_angular2/web/lib/components/users_administration_component.html
@@ -53,8 +53,10 @@
     <tr>
         <th>#</th>
         <th>Name</th>
+        <th>Created</th>
         <th>Email</th>
         <th>Password</th>
+        <th>Last Login</th>
         <th class="text-right">Actions</th>
     </tr>
     </thead>
