--- a/web_angular2/web/lib/components/users_administration_component.html
+++ b/web_angular2/web/lib/components/users_administration_component.html
@@ -20,7 +20,7 @@
 		                <span class="input-group-addon">
 			                <b>Max Per Page:  </b>
 		                </span>
-                <input style="width:50px;text-align: center;" type="text" class="form-control" [(ngModel)]="maxUsersPerPage" placeholder="">
+                <input style="width:50px;text-align: center;" type="number" class="form-control" [(ngModel)]="maxUsersPerPage" placeholder="">
             </div>
             <button type="submit" class="btn btn-simple btn-fab btn-fab-mini btn-round btn-primary">
                 <i class="material-icons">refresh</i>
@@ -53,10 +53,10 @@
     <tr>
         <th>#</th>
         <th>Name</th>
-        <th>Created</th>
-        <th>Email</th>
+        <th><a href="javascript:void(0)" (click)="sortUsers('createdAt')">Created<i class="material-icons">{{getOrderIcon('createdAt')}}</i></a></th>
+        <th><a href="javascript:void(0)" (click)="sortUsers('email')">Email<i class="material-icons">{{getOrderIcon('email')}}</i></a></th>
         <th>Password</th>
-        <th>Last Login</th>
+        <th><a href="javascript:void(0)" (click)="sortUsers('lastLogin')">Last Login<i class="material-icons">{{getOrderIcon('lastLogin')}}</i></a></th>
         <th class="text-right">Actions</th>
     </tr>
     </thead>
